--- a/src/components/Screens/HomeScreen.module.css
+++ b/src/components/Screens/HomeScreen.module.css
@@ -26,7 +26,7 @@
   max-width: 700px;
   min-width: 0;
   box-sizing: border-box;
-  align-self: stretch;
+  align-self: center;
 }
 
 .highlight {
@@ -49,7 +49,7 @@
   max-width: 700px;
   min-width: 0;
   margin-top: 20px;
-  align-self: stretch;
+  align-self: center;
 }
 
 .heading {
