--- a/src/components/Screens/LevelSelector.module.css
+++ b/src/components/Screens/LevelSelector.module.css
@@ -41,7 +41,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  align-self: stretch;
+  align-self: center;
 }
 
 .levelsContainer {
