--- a/src/components/Screens/VaultScreen.module.css
+++ b/src/components/Screens/VaultScreen.module.css
@@ -53,7 +53,7 @@
   max-width: 700px;
   min-width: 0;
   margin-top: 30px;
-  align-self: stretch;
+  align-self: center;
 }
 
 .heading {
